Check for valid URIs (not just URLs)